
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct task_struct {struct pid_link* pids; } ;
struct pid_link {struct pid* pid; int node; } ;
struct pid {int * tasks; } ;
typedef enum pid_type { ____Placeholder_pid_type } pid_type ;


 int PIDTYPE_MAX ;
 int free_pid (struct pid*) ;
 int hlist_del_rcu (int *) ;
 int hlist_empty (int *) ;

__attribute__((used)) static void __change_pid(struct task_struct *task, enum pid_type type,
   struct pid *new)
{
 struct pid_link *link;
 struct pid *pid;
 int tmp;

 link = &task->pids[type];
 pid = link->pid;

 hlist_del_rcu(&link->node);
 link->pid = new;

 for (tmp = PIDTYPE_MAX; --tmp >= 0; )
  if (!hlist_empty(&pid->tasks[tmp]))
   return;

 free_pid(pid);
}
